# netlify-builds

./: .all-contributorsrc  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  hacktoberfest.yml  poetry-upgrade.yml  pre-commit-autoupdate.yml  semantic-release.yml  uv-upgrade.yml
netlify_builds/: cli.py
src/netlify_builds/: cli.py
templates/: .changelog-old.md
tests/: test_cli.py
